# tiny-lm

./: .cursorrules  .gitignore  .pre-commit-config.yaml  Interesting papers.md  README.md  TODO.md  config.yaml  interesting_datasets.md  learning resources.md  plan_parallel_tokenization.md  pyproject.toml  run_training.sh  todo_store_tokenized.md  train_lm.py  train_tokenizer.py
.cursor/rules/: project-standards.mdc
.github/: PR_DESCRIPTION_INSTRUCTIONS.md  PULL_REQUEST_TEMPLATE.md
configs/data/: swallow-code-16k-sharded.yaml  swallow-code-8k-500m.yaml  swallow-code-8k.yaml  tinystories-8k-smoke.yaml  tinystories-8k.yaml
configs/datasets/: swallow-code.yaml  tinystories.yaml
configs/models/: gpt2-8k-2l.yaml  gpt2-small.yaml  ibis-16.yaml  ibis-32.yaml  ibis.yaml  llama3-16k.yaml  llama3-8k.yaml
configs/tokenizers/: swallow-code-16k-sharded-v1.yaml  swallow-code-16k-sharded.yaml  swallow-code-16k.yaml  swallow-code-8k.yaml  tinystories-16k.yaml  tinystories-8k.yaml
configs/training/: gpt2-8k.yaml  gpt2-small.yaml  smoke.yaml  swallow-code-8k-500m.yaml  swallow-code-8k.yaml
docs/: learning resources.md
examples/: test.ipynb  test_custom_qwen2_model.ipynb  test_gpt_model.ipynb
learn/: explore_models.ipynb  explore_tokenizers.ipynb  test_my_gpt_model.ipynb
scripts/data/: create_subset.py  download_data.py  download_dataset.py  tokenize_data.py  tokenize_data_sharded.py  train_tokenizer.py
scripts/hf_hub/: upload_gpt2.py
scripts/inference/: generate.py  generate_from_ckpt.py  generate_from_safetensors.py
scripts/tokenizer/: train_tokenizer.py
scripts/training/: count_model_params.py  find_batch_size.py  train.py  train_gpt2.py  train_llama3.py
src/callbacks/: training_time_callback.py
src/data/: lm_data_module.py  lm_dataset.py
src/model/: lm_module.py
src/model/utils/: activation.py  attention.py  generation.py  normalization.py
src/model/zoo/: my_gpt.py
src/tokenizer/: utils.py
tests/data/: __init__.py
tests/data/sharded/: test_data_module.py  test_dataset.py
tests/model/activation/: __init__.py  test_gelu.py
tests/model/architectures/: __init__.py  test_gpt2.py  test_gpt2_block.py  test_llama3.py  test_llama3_block.py
tests/model/attention/: test_multi_head.py
tests/model/blocks/: __init__.py  test_gpt2_block.py
tests/model/feedforward/: __init__.py  test_standard.py  test_swiglu.py
tests/model/normalization/: __init__.py  test_layer_norm.py  test_rms_norm.py
tests/model/position/: __init__.py  test_learned.py  test_rope.py
tiny_lm/: __init__.py
tiny_lm/data/: __init__.py  config.py  dataset_loader.py
tiny_lm/data/filters/: __init__.py  length_filter.py
tiny_lm/dataset/: __init__.py  config.py  dataset_loader.py
tiny_lm/model/: __init__.py  config.py  factory.py  utils.py
tiny_lm/tokenizer/: README.md  __init__.py  config.py  sharded_tokenizer.py  trainer.py  trainer_hf.py  trainer_rust.py
tiny_lm/training/: __init__.py  callbacks.py  config.py  lm_module.py  trainer.py
tiny_lm/utils/: __init__.py  precision.py
(+53 files in other folders)
